# shutil-mcp

./: .hgtags  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
scripts/: code-format.sh  lint-check-and-fix.sh  runtest.sh
shutil_mcp/: decorators.py  helpers.py  main.py  server.py
shutil_mcp/tools/: __init__.py  archive.py  file_ops.py  listing.py
tests/: test_file_ops.py  test_listing.py
